--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@ section_id: contact
           <h4>Fax:</h4>
           <p>+6102 236338 5456</p>
           <h4>Our Email:</h4>
-          <p>info@devoll-team.com</p>
+          <p>{{ site.email }}</p>
         </div>
       </div>
     </div>
