Start working on hero image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@ services:
     desc: Acusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.
 ---
 
-<div>
-  
+<section class="hero-image">
+  <div class="hero-text-container">
+    <h1 class="hero-title">Anna Reisz Editing</h1>
+    <h3 class="hero-subtitle">Collaborate with a supportive, personable, professional editor.</h1>
+  </div>
+</section>
+
+<div class="main-content">
+
 </div>
