Make some more changes to get the site set up

--- a/about.html
+++ b/about.html
@@ -4,14 +4,17 @@ title: About
 section_id: about
 ---
 
-{% include section-header.html title="About us" tagline="Know something about our team" image="image.png" %}
+{% include section-header.html title="About Anna" image="hero-image.jpg" %}
 
-<div class='full'>
-  <div class='row'>
-    <div class='medium-6 columns'>
-      <h3>Our history</h3>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-    </div>
+<div class="main-content">
+  <div class="flex-grow">
+    <h3>About Me</h3>
+    <p>
+      <img class="headshot" src="/assets/images/headshot.jpg" alt="Anna Reisz headshot" />
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero perferendis voluptates ullam labore architecto quibusdam tenetur recusandae eos delectus quisquam, ipsum exercitationem rem iste nobis eius quo. Et, ut doloremque!  Lorem, ipsum dolor.  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit magnam aspernatur exercitationem iusto recusandae aperiam optio autem doloribus odio! Quos amet aspernatur at explicabo omnis recusandae deleniti sed, eligendi veniam cum quo adipisci laudantium obcaecati tempore nesciunt, sunt corporis est, nemo dolores error. Explicabo ut amet possimus quas fugit ducimus?
+    </p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero perferendis voluptates ullam labore architecto quibusdam tenetur recusandae eos delectus quisquam, ipsum exercitationem rem iste nobis eius quo. Et, ut doloremque!  Lorem, ipsum dolor.  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit magnam aspernatur exercitationem iusto recusandae aperiam optio autem doloribus odio! Quos amet aspernatur at explicabo omnis recusandae deleniti sed, eligendi veniam cum quo adipisci laudantium obcaecati tempore nesciunt, sunt corporis est, nemo dolores error. Explicabo ut amet possimus quas fugit ducimus?
+    </p>
   </div>
 </div>
