--- a/index.html
+++ b/index.html
@@ -21,5 +21,41 @@ services:
 </section>
 
 <div class="main-content">
+  <div class="flex-third">
+    <div class="callout-container">
+      <div class="callout-icon-container">
+        <i class="fas fa-leaf"></i>
+      </div>
+      <h2>COPY EDITING</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt autem distinctio libero exercitationem similique reiciendis? Laborum necessitatibus excepturi eaque distinctio animi ex quibusdam voluptates adipisci?</p>
+    </div>
+  </div>
+  <div class="flex-third">
+    <div class="callout-container">
+      <div class="callout-icon-container">
+        <i class="fab fa-pagelines"></i>
+      </div>
+      <h2>DEVELOPMENTAL EDITING</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt autem distinctio libero exercitationem similique reiciendis? Laborum necessitatibus excepturi eaque distinctio animi ex quibusdam voluptates adipisci?</p>
+    </div>
+  </div>
+  <div class="flex-third">
+    <div class="callout-container">
+      <div class="callout-icon-container">
+        <i class="fab fa-envira"></i>
+      </div>
+      <h2>AUTHOR COACHING</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt autem distinctio libero exercitationem similique reiciendis? Laborum necessitatibus excepturi eaque distinctio animi ex quibusdam voluptates adipisci?</p>
+    </div>
+  </div>
+</div>
 
+<div class="main-content">
+  <div class="flex-grow">
+    <h3>How can I help?</h3>
+    <p>
+      <img class="headshot" src="/assets/images/headshot.jpg" alt="Anna Reisz headshot" />
+      <strong>I'm Anna Reisz</strong> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero perferendis voluptates ullam labore architecto quibusdam tenetur recusandae eos delectus quisquam, ipsum exercitationem rem iste nobis eius quo. Et, ut doloremque!  Lorem, ipsum dolor.  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit magnam aspernatur exercitationem iusto recusandae aperiam optio autem doloribus odio! Quos amet aspernatur at explicabo omnis recusandae deleniti sed, eligendi veniam cum quo adipisci laudantium obcaecati tempore nesciunt, sunt corporis est, nemo dolores error. Explicabo ut amet possimus quas fugit ducimus?
+    </p>
+  </div>
 </div>
